deleteUser edge case fix